# swatchdog

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: docker-build.yml  rust.yml
src/: args.rs  logger.rs  main.rs  serivce.rs  watchdog.rs
