[package]
name = "swatchdog"
version = "0.1.1"
authors = ["Bryan <opensource@singee.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
ctrlc = "3.4.4"
parse_duration = "2.1.1"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "rustls-tls", "rustls-tls-native-roots"] }
humantime = "2.1.0"
pinger="1.1.1"
sysinfo = "0.30.7"
url="2.5.0"
flexi_logger = { version = "0.28.0", features = ["specfile_without_notification", "async"] }
log = "0.4.21"
anyhow = "1.0.81"
log-panics = { version = "2.1.0", features = []}

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = true

[dev-dependencies]
httptest = "0.15.5"
